Fix overflow
when the user types to many numbers the text overflows; Fixed

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 #calculator {
     border-radius: 20px;
     padding: 10px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     height: 600px;
@@ -32,13 +32,15 @@ body {
 }
 
 #calculator-display{
+    overflow-wrap: anywhere;
     padding-right: 25px;
+    width: fit-content;
     display: flex;
-    flex-direction: column;
-    justify-content: end;
+    align-items: end;
     font-size: 65px;
     color: white;
-    margin-left: auto;
+    margin-left: auto;    
+    overflow: auto;
     height: 200px;
 }
 
